# OS_Learning

./: Cargo.toml  makefile  readme.md  rust-toolchain.toml
record_md/: day1.md  day10.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md  day_6.md
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  stack_overflow.rs
